--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,14 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments += [
+                        "room.schemaLocation": "$projectDir/schemas".toString(),
+                        "room.incremental"   : "true"
+                ]
+            }
+        }
     }
 
     buildTypes {
@@ -58,6 +66,9 @@ dependencies {
     kapt "com.google.dagger:hilt-android-compiler:2.41"
     kapt "androidx.hilt:hilt-compiler:1.0.0"
 
+    // Timber
+    implementation "com.jakewharton.timber:timber:5.0.1"
+    
     testImplementation "junit:junit:4.13.2"
     androidTestImplementation "androidx.test.ext:junit:1.1.3"
     androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
