--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,8 +66,9 @@ dependencies {
     kapt "com.google.dagger:hilt-android-compiler:2.41"
     kapt "androidx.hilt:hilt-compiler:1.0.0"
 
-    // Timber
+    // Utility
     implementation "com.jakewharton.timber:timber:5.0.1"
+    implementation "com.github.skydoves:progressview:1.1.3"
     
     testImplementation "junit:junit:4.13.2"
     androidTestImplementation "androidx.test.ext:junit:1.1.3"
